Fixed spacing issues.

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a {
 
 .content {
     display: flex;
-    flex: 1;
+    flex: 1 0 auto;
     flex-direction: column;
     justify-content: space-between;
 }
